# ratls

./: .gitignore  Cargo.toml  NOTICE.txt  README.md
examples/: README.md
examples/client/: Cargo.toml
examples/client/src/: main.rs  resolver.rs
examples/server/: Cargo.toml
examples/server/cert/: root-ca.srl
examples/server/certs/: root-ca.srl  server-gen-cert.sh  server.cnf  server.crt
examples/server/ratls/: example.json
examples/server/src/: main.rs
exmaples/server/: Cargo.toml
ratls/: Cargo.toml
ratls/src/: cert_resolver.rs  cert_verifier.rs  client.rs  error.rs  server.rs  tools.rs
server/: Cargo.toml
tools/: README.md
tools/ratls-get/: Cargo.toml
tools/ratls-get/src/: client.rs  lib.rs  main.rs  tls.rs  token.rs  utils.rs
tools/ratls-serve/: Cargo.toml
tools/ratls-serve/certs/: server.crt
tools/ratls-serve/root/: NOTICE.txt  example.txt
tools/ratls-serve/root/test/: test.txt
tools/ratls-serve/src/: files.rs  httpd.rs  lib.rs  main.rs  tls.rs  utils.rs
