[package]
name = "ratls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { version = "0.22", features = ["alloc"] }
bcder = "0.7.3"
env_logger = "0.11"
lazy_static = "1.5"
log = "0.4"
pkcs8 = { version = "0.10", features = ["alloc"] }
rand = "0.8"
rcgen = "0.14"
rsa = { version = "0.9", features = ["nightly", "pkcs5"] }
rustls = { version = "0.23", default-features = false, features = ["std", "logging", "tls12", "ring"] }
rustls-pemfile = "2.2"
sha2 = "0.10"
simple_asn1 = "0.6"
x509-certificate = "0.25"
rust-rsi = { git = "https://github.com/islet-project/rust-rsi" }
rustls-webpki = "0.103"

[features]
# this feature is for testing purposes only, DO NOT ENABLE otherwise
disable-challenge = []
