[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
log = "*"
# cargo is stupid and using ratls by path conflicts with veraison-verifier that uses ratls as well
ratls = { git = "https://github.com/islet-project/ratls" }
veraison-verifier = { git = "https://github.com/islet-project/veraison-verifier" }
