[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
log = "*"
ratls = { path = "../../ratls" }
serde_json = { version = "*", optional = true }
realm-verifier = { git = "https://github.com/islet-project/realm-verifier", optional = true }
veraison-verifier = { git = "https://github.com/islet-project/veraison-verifier", optional = true }

[features]
disable-challenge = [ "ratls/disable-challenge" ]
realm = [ "dep:realm-verifier", "dep:serde_json" ]
veraison = [ "dep:veraison-verifier" ]
